--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -43,71 +43,28 @@
           <a class="nav-link js-scroll-trigger" href="../index.html#portfolio">Return</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#bagel">Bagel</a>
+          <a class="nav-link js-scroll-trigger" href="#CCD">Cryptocurrency Community Database</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#chiventure">Chiventure</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#CCD">Cryptocurrency Community Database</a>
+          <a class="nav-link js-scroll-trigger" href="#shakedlab">Shaked Lab Website</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#Hackathon19">Google Home LED Encoding</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#shakedlab">Name Generator</a>
+          <a class="nav-link js-scroll-trigger" href="#go">Go</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+          <a class="nav-link js-scroll-trigger" href="#bagel">Bagel</a>
         </li>
       </ul>
     </div>
   </nav>
 
   <div class="container-fluid p-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="bagel">
-      <div class="w-100">
-        <h2 class="mb-5">Bagel</h2>
-        <p>Bagel is a word-scramble game that I’m currently working on. More information soon.</p>
-        <img class="banner-img" src="\img\Bagel\bagel_banner.png">
-      </div>
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="chiventure">
-      <div class="w-100">
-        <h2 class="mb-5">Chiventure</h2>
-        <!--<ul class="fa-ul mb-0">
-          <li>-->
-        <p>Chiventure is a game engine built to run text-based games specified in an original file format designed for this project. This project was the creation of UChicago’s software development class - a course where 30 students spend 10 weeks working
-          together to develop on major project.It is intended to be a simulation of what it is like to work on a real software development team.
-        </p>
-        <p>
-          This game, like many classic text-based games allow the player to navigate and interact with the world of this game via text commands.
-        </p>
-        <div class="row">
-          <div class="column">
-          <img class="col-img" src="\img\Chiventure\logo.png">
-          </div>
-          <div class="column">
-            <img class="col-img" src="\img\Chiventure\map-view.jpg">
-          </div>
-        </div>
-        <p>I was on the UI team for this project. We developed the entire UI using the NCurses library which allowed us to have this game run entirely in a linux terminal. I developed a map interface that generates a map from the game file and updates to
-          show the player where they are in game world. Visual elements like this are not typical of the classic text-based games we were emulating with this project but we felt that this addition added a lot of value to the text-based format.
-        </p>
-        <p>This is an image of a near-final iteration of the map. The main component of the map is the grid of boxes representing “rooms” or areas of the game. You can see a small ascii character-based person in the center indicating the player’s location
-          and in the upper left hand corner, the x, y, and z coordinates of the player’s current location. Some version of the map also include illustrations of connections between rooms.
-        </p>
-      </div>
-    </section>
-
-    <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="CCD">
       <div class="w-100">
@@ -151,20 +108,32 @@
       </div>
     </section>
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Hackathon19">
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="chiventure">
       <div class="w-100">
-        <h2 class="mb-5">Google Home LED Encoding</h2>
-        <p>A partner and I built this project at Uncommon Hacks 2019, UChicago’s annual Hackathon. The hackathon encourages projects that are “uncommon” over projects that may be more practical.
+        <h2 class="mb-5">Chiventure</h2>
+        <!--<ul class="fa-ul mb-0">
+          <li>-->
+        <p>Chiventure is a game engine built to run text-based games specified in an original file format designed for this project. This project was the creation of UChicago’s software development class - a course where 30 students spend 10 weeks working
+          together to develop on major project.It is intended to be a simulation of what it is like to work on a real software development team.
         </p>
-        <p>Our project converts audio messages that a user gives a google home to a series of LED light blinks on our LED-to-Alphabet translation board, inspired by a scene from the Netflix Show, Stranger Things.
+        <p>
+          This game, like many classic text-based games allow the player to navigate and interact with the world of this game via text commands.
         </p>
-        <p>I first developed a google home application in which the google assistant prompts the user to say a message. The google assistant app then uploads this message to a google firebase server. The lights on the board are operated by an arduino UNO
-          running character-to-LED blink translation functions. I used a python script to pull updated messages off of the firebase server and send them to the UNO via serial port messages.
-        </p>
-        <div class="video-box">
-          <iframe class="video" src="https://www.youtube.com/embed/ZsYna0b4P1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="row">
+          <div class="column">
+            <img class="col-img" src="\img\Chiventure\logo.png">
+          </div>
+          <div class="column">
+            <img class="col-img" src="\img\Chiventure\map-view.jpg">
+          </div>
         </div>
-        <p>If I had more time to work on the project, the plan was to use computer vision software and a laptop camera to translate encoded LED blinks back into text. This would then become a form of (impractical) visual light file transfer.
+        <p>I was on the UI team for this project. We developed the entire UI using the NCurses library which allowed us to have this game run entirely in a linux terminal. I developed a map interface that generates a map from the game file and updates to
+          show the player where they are in game world. Visual elements like this are not typical of the classic text-based games we were emulating with this project but we felt that this addition added a lot of value to the text-based format.
+        </p>
+        <p>This is an image of a near-final iteration of the map. The main component of the map is the grid of boxes representing “rooms” or areas of the game. You can see a small ascii character-based person in the center indicating the player’s location
+          and in the upper left hand corner, the x, y, and z coordinates of the player’s current location. Some version of the map also include illustrations of connections between rooms.
         </p>
       </div>
     </section>
@@ -228,6 +197,52 @@
         </div>
       </div>
   </div>
+  </section>
+
+  <hr class="m-0">
+
+  <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="Hackathon19">
+    <div class="w-100">
+      <h2 class="mb-5">Google Home LED Encoding</h2>
+      <p>A partner and I built this project at Uncommon Hacks 2019, UChicago’s annual Hackathon. The hackathon encourages projects that are “uncommon” over projects that may be more practical.
+      </p>
+      <p>Our project converts audio messages that a user gives a google home to a series of LED light blinks on our LED-to-Alphabet translation board, inspired by a scene from the Netflix Show, Stranger Things.
+      </p>
+      <p>I first developed a google home application in which the google assistant prompts the user to say a message. The google assistant app then uploads this message to a google firebase server. The lights on the board are operated by an arduino UNO running
+        character-to-LED blink translation functions. I used a python script to pull updated messages off of the firebase server and send them to the UNO via serial port messages.
+      </p>
+      <div class="video-box">
+        <iframe class="video" src="https://www.youtube.com/embed/ZsYna0b4P1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
+
+  <hr class="m-0">
+
+  <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="go">
+    <div class="w-100">
+      <h2 class="mb-5">Go</h2>
+      <img class="profile-img" src="\img\Go\optimized gif.gif"></img>
+      <p>Go is an ancient Chinese two-player game. I recreated the game go with the programming language Typed Racket for a course I was enrolled in.
+      </p>
+      <p>The game is fully playable by two players. Notice the UI details - a holographic circle under the cursor indicating a potential placement, a star indicating the last placed piece, a square indicating where a piece was captured last turn, and a series
+        of timers showing how much time each player has spent planning their moves.
+      </p>
+      <p>The most challenging component of building this game was the mechanic that removes pieces from the board. In go, a string of adjacent pieces is captured when the string is entirely surrounded by the opponent’s pieces or edges of the board. Checking
+        for this case is actually a graph theory problem that required a graph traversal algorithm to resolve.
+      </p>
+
+    </div>
+  </section>
+
+  <hr class="m-0">
+
+  <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="bagel">
+    <div class="w-100">
+      <h2 class="mb-5">Bagel</h2>
+      <p>Bagel is a word-scramble game that I’m currently working on. More information soon.</p>
+      <img class="banner-img" src="\img\Bagel\bagel_banner.png">
+    </div>
   </section>
 
   <hr class="m-0">
