--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="subheading mb-5">
           <a href="mailto:sshatzkin@uchicago.edu">sshatzkin@uchicago.edu</a>
         </div>
-        <p class="lead mb-5">I am a computer science student at the University of Chicago with a minor in biology. I’m interested in exploring the intersection between technology and biology in new and interesting ways.</p>
+        <p class="lead mb-5">A computer science student at the University of Chicago with a minor in biology. I’m interested in exploring the intersection between technology and biology in new and interesting ways.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/samshatzkin/">
             <i class="fab fa-linkedin-in"></i>
@@ -99,59 +99,64 @@
         <h2 class="mb-5">Portfolio</h2>
         <ul id="rig">
           <li>
-            <a class="rig-cell" href="html/portfolio.html#bagel">
-              <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
+            <a class="rig-cell" href="html/portfolio.html#CCD">
+              <img class="rig-img" src="img/CCD/CCD 4-3.png">
               <span class="rig-overlay"></span>
-              <span class="rig-text">Bagel</span>
+              <span class="rig-text">The CCD
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
             </a>
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio.html#chiventure">
               <img class="rig-img" src="img/Chiventure/Banner.png">
               <span class="rig-overlay"></span>
-              <span class="rig-text">Chiventure</span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio.html#CCD">
-              <img class="rig-img" src="img/CCD/CCD 4-3.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">The CCD</span>
-            </a>
-          </li>
-          <li>
-            <a class="rig-cell" href="html/portfolio.html#Hackathon19">
-              <img class="rig-img" src="img/Hackathon/Board.jpg">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Hackathon 2019</span>
+              <span class="rig-text">Chiventure
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
             </a>
           </li>
           <li>
             <a class="rig-cell" href="html/portfolio.html#shakedlab">
               <img class="rig-img" src="img/Shaked/Home 4-3.jpg">
               <span class="rig-overlay"></span>
-              <span class="rig-text">Shaked Lab Website</span>
+              <span class="rig-text">Shaked Lab Website
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#chiventure">
-              <img class="rig-img" src="img/Chiventure/Banner.png">
+            <a class="rig-cell" href="html/portfolio.html#Hackathon19">
+              <img class="rig-img" src="img/Hackathon/Board.jpg">
               <span class="rig-overlay"></span>
-              <span class="rig-text">Chiventure</span>
+              <span class="rig-text">Hackathon 2019
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="html/portfolio.html#CCD">
-              <img class="rig-img" src="img/CCD/CCD 4-3.png">
+            <a class="rig-cell" href="html/portfolio.html#go">
+              <img class="rig-img" src="img/Go/go 4-3.png">
               <span class="rig-overlay"></span>
-              <span class="rig-text">The CCD</span>
+              <span class="rig-text">Go
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+              </span>
             </a>
           </li>
           <li>
-            <a class="rig-cell" href="#">
-              <img class="rig-img" src="img/Chiventure/Banner.png">
-              <span class="rig-overlay"></span>
-              <span class="rig-text">Curabitur tempus</span>
+            <a class="rig-cell" href="html/portfolio.html#bagel">
+              <img class="rig-img" src="img/Bagel/Bagel 4-3.png">
+              <span class="rig-overlay">
+              </span>
+              <span class="rig-text">Bagel
+                <br>
+                <i class="fas fa-chevron-circle-right"></i>
+            </span>
             </a>
           </li>
         </ul>
