--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
           <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
@@ -91,7 +91,7 @@
         </div>
         <br>
         <h3>
-          Scroll down for Portfolio
+          Scroll Down For <a class="js-scroll-trigger" href="#portfolio">Portfolio</a>
         </h3>
       </div>
     </section>
@@ -167,6 +167,67 @@
       </div>
     </section>
 
+  <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">University of Chicago - Chicago, IL</h3>
+            <div class="subheading">Bachelor of Science</div>
+            <div>Computer Science</div>
+            <p>GPA: 3.95</p>
+            <div class="subheading mb-3">Representative Courses</div>
+            <ul class="fa-ul mb-0">
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 21800 - Data Science for Compuer Scientists
+              </li>
+              <li>
+                <i class="fa-li fa fa-laptop-code"></i> CMSC 22000 - Software Development
+              </li>
+              <li>
+                <i class="fa-li fa fa-dna"></i> BIOS 20151 - Quantitative Modeling in Biology
+              </li>
+              <li>
+                <i class="fa-li fa fa-dna"></i> BIOS 20153 - Fundamentals of Ecology and Evolutionary Biology
+              </li>
+              <li>
+                <i class="fa-li fa fa-bone"></i> BIOS 29142 - From Fossils to Fermi's Paradox: Origin and Evolution of Intelligent Life
+              </li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Currently Enrolled, Class of 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Big Idea Gap Year - Be'er Sheva, Israel</h3>
+            <div> Training Course for Web and Mobile Programmers. Also participated in a one month internship at the Center for Development and innovation in Be’er Sheva’s high-tech park.
+            </div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sept 2017 - Feb 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Bronx High School of Science - New York, NY</h3>
+            <div> Specialized Science High School</div>
+            <p></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Sept 2013 - June 2017</span>
+          </div>
+        </div>
+
+      </div>
+    </section>
+
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
@@ -176,13 +237,13 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Media, Arts, Data and Design Center at the University of Chicago - Chicago, IL</h3>
-            <div class="subheading mb-3">Hack Arts Lab Engineer</div>
+            <div class="subheading mb-3">Hack Arts Lab (HAL) & Weston Game Lab (WGL) Technician</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
-                Supervise use of the Hack Arts Lab’s fabrication machinery, including laser cutters, CNC machines, and 3-D Printers
+                Supervise and educate on the use of HAL’s fabrication machinery, including laser cutters, CNC machines, vinyl cutters, and high-end 3-D printers
               </li>
               <li>
-                Oversee organizational projects and manage lab resources
+                Conduct in laboratory upgrade projects i.e. repairing damaged gaming consoles, installing laser cutter attachments
               </li>
             </ul>
           </div>
@@ -197,10 +258,13 @@
             <div class="subheading mb-3">Website Designer and Developer</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
-                Designed and constructed a website for the Cell Biology and Cancer Science Department's Research Lab
+                Designed and constructed a website for one of the Cancer Science Department’s Research Labs
               </li>
               <li>
-                Manage the website and perform occaisional updates
+                The redesigned website increased the number of research position applicants by about 200%
+              </li>
+              <li>
+                Manage the website, performing regular maintenance and content updates
               </li>
             </ul>
           </div>
@@ -215,7 +279,7 @@
             <div class="subheading mb-3">Intern</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
-                Conducted research on GPS and automated vehicle industries for one of Israel’s top sensor cyber security startups
+                Conducted research on the GPS and automated vehicle industries for GPS sensor security startup
               </li>
               <li>
                 Prepared and presented findings to the CEO and company-wide
@@ -230,16 +294,16 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Fokoya - Tel Aviv, IL</h3>
-            <div class="subheading mb-3">Intern, Project Manager</div>
+            <div class="subheading mb-3">Intern in Project Management and Advertising	r</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
-                Developed and marketed the Cryptocurrency Community Database
+                Developed and marketed the Cryptocurrency Community Database, a forum-like system created in Google Sheets
               </li>
               <li>
-                Automated manual office processes, increasing efficiency by up to 600%
+                Produced and hosted a livestream for product marketing and community engagement on 4 social media platforms
               </li>
               <li>
-                Produced and hosted a livestream for product marketing and community engagement on 4 social media platforms twice per week
+                Automated manual office processes by developing a Google Chrome extension to perform application testing functions, cutting down a task that formerly took hours to only a few seconds
               </li>
             </ul>
           </div>
@@ -254,7 +318,7 @@
             <div class="subheading mb-3">Research Assistant</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
               <li>
-                Assisted researchers with statistical analysis of RNA sequencing data utilizing the programming language R
+                Assisted researchers with statistical analysis of RNA sequencing data utilizing the language R
               </li>
             </ul>
           </div>
@@ -295,66 +359,6 @@
             <span class="text-primary">Summer 2014,'15,'16,'17</span>
           </div>
         </div>
-
-      </div>
-
-    </section>
-
-    <hr class="m-0">
-
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
-      <div class="w-100">
-        <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">University of Chicago - Chicago, IL</h3>
-            <div class="subheading">Bachelor of Science</div>
-            <div>Computer Science</div>
-            <p>GPA: 3.94</p>
-            <div class="subheading mb-3">Representative Courses</div>
-            <ul class="fa-ul mb-0">
-              <li>
-                <i class="fa-li fa fa-laptop-code"></i> CMSC 21800 - Data Science for Compuer Scientists
-              </li>
-              <li>
-                <i class="fa-li fa fa-laptop-code"></i> CMSC 22000 - Software Development
-              </li>
-              <li>
-                <i class="fa-li fa fa-dna"></i> BIOS 20151 - Quantitative Modeling in Biology
-              </li>
-              <li>
-                <i class="fa-li fa fa-bone"></i> BIOS 29142 - From Fossils to Fermi's Paradox: Origin and Evolution of Intelligent Life
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Currently Enrolled, Class of 2022</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Big Idea Gap Year - Be'er Sheva, Israel</h3>
-            <div> Certificate for Training Course for Web and Mobile Programmers. Also participated in a one month internship at the Center for Development and innovation in Be’er Sheva’s high technology park.
-            </div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Sept 2017 - Feb 2018</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
-          <div class="resume-content">
-            <h3 class="mb-0">Bronx High School of Science - New York, NY</h3>
-            <div> Specialized math and science High School</div>
-            <p></p>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">Sept 2013 - June 2017</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -438,10 +442,13 @@
         <h2 class="mb-5">Interests</h2>
         <p>I’m vice president of UChicago’s Engineering Society, a student organization that serves as the engineering hub for UChicago’s undergrad student body. We host educational workshops, guest speakers, hackathons and weekly project nights where members
           work on a variety of long and short - term projects. Some of our past projects have included robotic arms, quadcopters, acoustic levitators and solar-powered hats.</p>
-        <div class="subheading mb-3">Books I'm Reading</div>
+        <div class="subheading mb-3">Recent Reads</div>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-book"></i> Algorithms to Live By by Brian Christian and Tom Griffiths. 10/10 Recommend.
+            <i class="fa-li fa fa-book"></i> <i>Algorithms to Live By</i> by Brian Christian and Tom Griffiths. 10/10 - Exceptional Book that cleverly applies Computer Science intution to real-world problems and in doing so, applies real-world intution to the study of computer science.
+          </li>
+          <li>
+            <i class="fa-li fa fa-book"></i> <i>The Wasp That Brainwashed the Caterpillar</i> by Matt Simon. (Currently Reading)
           </li>
         </ul>
       </div>
@@ -454,9 +461,14 @@
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i> Award for Outstanding Abstract Art, Arts Connection - May 2015</li>
+            <i class="fa-li fa fa-trophy text-warning"></i> Dean's List 2018-2019 Academic Year
+          </li>
           <li>
-            <i class="fa-li fa fa-trophy text-warning"></i> Award for Display of Outstanding Entrepeneurship, Big Idea - Summer 2014</li>
+            <i class="fa-li fa fa-trophy text-warning"></i> Award for Outstanding Abstract Art, Arts Connection - May 2015
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i> Award for Display of Outstanding Entrepeneurship, Big Idea - Summer 2014
+          </li>
         </ul>
       </div>
     </section>
