--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Sam Shatzkin</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Pic2.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/ProfilePic.png" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -46,9 +46,6 @@
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
@@ -109,75 +106,6 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
-      <div class="w-100">
-        <h2 class="mb-5">Ongoing Projects</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Character Search, Paleontology Department at the UNiversity of Chicago - Chicago, IL</h3>
-            <div class="subheading mb-3">Lead Developer (React JS, AWS, GitHub)</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Developing web-based software tool and database for conducting cladistic analysis and storing character data
-              </li>
-              <li>
-                Work with Paleontologist Paul Sereno to develop software to execute his novel cladistic analysis methodology
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Old Cow - Baltimore, MD / Remote</h3>
-            <div class="subheading mb-3">Graphic Design and Web Development (Adobe Illustrator, WordPress)</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Currently working with Old Cow to design a product line of apparel, accessories and gift items
-              </li>
-              <li>
-                Create all of the company’s design materials, including logos, merchandise, social media images, and design guides
-              </li>
-              <li>
-                Develop the company website and manage the company’s IT administration
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="resume-content">
-            <h3 class="mb-0">Lego-Building Robot, Engineering Society at UChicago</h3>
-            <div class="subheading mb-3">Project Lead</div>
-            <ul class="fa-ul mb-0" style="list-style-type:disc;">
-              <li>
-                Working with a team of Engineering Society members to build and program a robot that will construct sculptures out of legos
-              </li>
-              <li>
-                Currently applying software prototypes to temporary robot and applying for project grants
-              </li>
-              <li>
-                Working with artistic advisor from the MADD center to explore the artistic implications of the project
-              </li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">September 2019 - Present</span>
-          </div>
-        </div>
-
-      </div>
-    </section>
-
-    <hr class="m-0">
-
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="portfolio">
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h2>
@@ -196,7 +124,7 @@
             <a class="rig-cell" href="html/portfolio.html#balt">
               <img class="rig-img" src="img\Nature Photography\Baltimore 2020\Owl_4-3.jpg">
               <span class="rig-overlay"></span>
-              <span class="rig-text">Nature Photography: Quarentine 2020
+              <span class="rig-text">Nature Photography: Quarantine 2020
                 <br>
                 <i class="fas fa-chevron-circle-right"></i>
               </span>
@@ -437,6 +365,19 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0">
+              <img src="img\Experience Icons\amazon.jpg" class="icon_photo"> &nbsp
+              Amazon - New York, NY
+            </h3>
+            <div class="subheading mb-3">Software Development Engineer</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">Beginning Sept. 2022</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0">Arch Capital Group. Ltd. - Remote / New York, NY</h3>
             <div class="subheading mb-3">Software Engineering Intern (Azure, Kubernetes, Docker, Python)</div>
             <ul class="fa-ul mb-0" style="list-style-type:disc;">
@@ -449,7 +390,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2021 - Present</span>
+            <span class="text-primary">June 2021 - August 2021</span>
           </div>
         </div>
 
